# KurisuNet

./: .gitignore  README.md  cspell.json  pyproject.toml
.github/workflows/: test.yml
example/simple_cnn/: config.yaml  main.py  migrate_weights.py  net.yaml  old_net.py  summary.py
example/simple_cnn/module/: config.yaml  converter.py  summary.py  utils.py
example/simple_cnn/weights/: migrate_weights.py  old_net_weights.pt
example/vae/: migrate_weights.py  net.yaml  old_net.py  summary.py
example/vae/module/: converter.py  module.yaml  net.yaml  summary.py
example/vae/weights/: migrate_weights.py  old_net.py
example/yolov12/: module.yaml  net.yaml  not_used.yaml  summary.py
example/yolov12/module/: config.yaml  module.yaml  net.yaml  summary.py  test.py  test_converter.py  utils.py
src/kurisunet/: __init__.py  constants.py
src/kurisunet/basic/: types.py  utils.py
src/kurisunet/config/: types.py  utils.py
src/kurisunet/module/: __init__.py  config.py  module.py  register.py  types.py  utils.py
src/kurisunet/net/: __init__.py  module.py  types.py  utils.py
src/kurisunet/register/: __init__.py  register.py  register_config.py  register_file.py
src/kurisunet/utils/: debug.py  logger.py  module.py  weights.py
tests/basic/: basic_utils_test.py
tests/config/: config_utils_test.py
tests/config/module/: args_test.py  converters_test.py  exec_test.py  imports_test.py  vars_test.py
tests/net/: net_module_test.py  net_utils_test.py
tests/register/: register_test.py
tests/test_module/: module.yaml  net.yaml
(+15 files in other folders)
