[project]
name = "kurisunet"
version = "0.1.0"
description = "Config based pytorch model framework"
authors = [{ name = "KurisuNya", email = "cuizhu1216@gmail.com" }]
dependencies = [
    "pyyaml",
    "loguru",
    "torch>=2.0.0",
    "kurisuinfo>=0.2.3",
    "safetensors",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kurisunet"]
